# cpp_modules_practice

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
cmake/: CPM.cmake
src/: CMakeLists.txt  base.c  corout.cpp  deduce.cpp  dispatch.cpp  info.cpp  mtest.cpp
src/common/: basegeo.cppm  common.cxx  other.cxx
src/coroutine/: CMakeLists.txt  read.cpp
src/geometry/: base.cxx  geometry.cxx
src/roman/: Impl.cpp  M.cxx  impl_part.cxx  implp.cxx  interface_part.cxx
src/view/: station.cpp  test.cpp  truck.cpp  view.cpp
src/view/interface/: station.cppm  stl.cppm  test.cppm  truck.cppm  view.cppm
